--- a/第3周主線作業.html
+++ b/第3周主線作業.html
@@ -14,7 +14,7 @@
         <div class="nav">
             <div class="nav-box-in d-flex box-in-set">
                 <div class="nav_1A-img">
-                    <img src="img/logo-white.png" alt="logo-white">
+                    <a href="#"><img src="img/logo-white.png" alt="logo-white"></a>
                 </div>
                 <div class="nav_1A-list d-flex">
                     <div class="nav_2A-list">
@@ -234,11 +234,11 @@
                 <div class="footer_1A-box d-flex">
                     <div class="footer_2A-article-box">
                         <div class="footer_3A-text-box d-flex">
-                            <p class="text-set">首頁</p>
-                            <p class="text-set">系列鏡框</p>
-                            <p class="text-set">門市據點</p>
-                            <p class="text-set">部落格</p>
-                            <p class="text-set">常見問題</p>
+                            <a href="#"><p class="text-set">首頁</p></a>
+                            <a href="#"><p class="text-set">系列鏡框</p></a>
+                            <a href="#"><p class="text-set">門市據點</p></a>
+                            <a href="#"><p class="text-set">部落格</p></a>
+                            <a href="#"><p class="text-set">常見問題</p></a>
                         </div>
                         <div class="footer_3A-phone-box d-flex">
                             <span class="material-symbols-outlined icon-set">
@@ -255,17 +255,17 @@
                     </div>
                     <div class="footer_2A-icon-box">
                         <div class="footer_3B-icon-img d-flex">
-                            <img src="img/ic-social-fb.png" alt="fb-icon">
-                            <img src="img/ic_social_ig.png" alt="ig-icon">
-                            <img src="img/ic_social_line.png" alt="line-icon">
+                            <a href="#"><img src="img/ic-social-fb.png" alt="fb-icon"></a>
+                            <a href="#"><img src="img/ic_social_ig.png" alt="ig-icon"></a>
+                            <a href="#"><img src="img/ic_social_line.png" alt="line-icon"></a>
                         </div>
                     </div>
                 </div>
                 <div class="footer_1A-ft-box d-flex">
                     <p>Copyright © 2020 Glasses.All rights reserved.</p>
                     <div class="footer_2B-text d-flex">
-                        <p>隱私權政策</p>
-                        <p>服務條款</p>
+                        <a href="#"><p>隱私權政策</p></a>
+                        <a href="#"><p>服務條款</p></a>
                     </div>
                 </div>
             </div>
