--- a/第3周主線作業.html
+++ b/第3周主線作業.html
@@ -12,11 +12,11 @@
     <div class="container">
         <!----------------------nav------------------->
         <div class="nav">
-            <div class="nav-box-in d-flex box-in-set">
+            <div class="nav-box-in">
                 <div class="nav_1A-img">
                     <a href="#"><img src="img/logo-white.png" alt="logo-white"></a>
                 </div>
-                <div class="nav_1A-list d-flex">
+                <div class="nav_1A-list">
                     <div class="nav_2A-list">
                         <a href="#"><p>系列鏡框</p></a>
                     </div>
@@ -30,12 +30,12 @@
                         <a href="#"><p>常見問題</p></a>
                     </div>
                 </div>
-            </div>
+            </div>    
         </div>
         <!----------------------nav------------------->
         <!----------------------header------------------->
         <div class="header">
-            <div class="header-box-in box-in-set">
+            <div class="header-box-in">
                 <div class="header_1A-article">
                     <h2>Promise-Desert 2020 早春系列</h2>
                     <h1>看得清，才能看得遠</h1>
@@ -48,11 +48,11 @@
         <!----------------------header------------------->
         <!----------------------icon------------------->
         <div class="icon">
-            <div class="icon_box-in box-in-set">
+            <div class="icon-box-in">
                 <div class="icon_1A-title">
                     <h2>用專業的心，做專業的事</h2>
                 </div>
-                <div class="icon_1A-icon d-flex">
+                <div class="icon_1A-icon">
                     <div class="icon_2A-card1">
                         <div class="icon_3A-img">
                             <img src="img/home-section2-1.png" alt="home-section2-1">
@@ -87,11 +87,11 @@
         <!----------------------icon------------------->
         <!----------------------main------------------->
         <div class="main">
-            <div class="main_box-in box-in-set">
+            <div class="main-box-in">
                 <div class="main_1A-title">
                     <h2>經典系列鏡框</h2>
                 </div>
-                <div class="main_1A-icon d-flex">
+                <div class="main_1A-icon">
                     <div class="main_2A-card1">
                         <div class="main_3A-img">
                             <img src="img/home-section3-1.png" alt="home-section2-1">
@@ -116,15 +116,15 @@
         <!----------------------main------------------->
         <!----------------------main2------------------->
         <div class="main2">
-            <div class="main2_box-in">
+            <div class="main2-box-in">
                 <div class="main2_1A-title">
                     <h2>聯名設計鏡框</h2>
                 </div>
-                <div class="main2_1A-icon d-flex">
+                <div class="main2_1A-icon">
                     <div class="main2_2A-card1">
                         <div class="main2_3A-img">
                             <picture>
-                                <source srcset="img/home-section4-1-sm.png" media="(max-width:735px)">
+                                <source srcset="img/home-section4-1-sm.png" media="(max-width:576px)">
                                 <img src="img/home-section4-1.png" alt="home-section2-1">
                             </picture>
                         </div>
@@ -133,7 +133,7 @@
                     <div class="main2_2A-card1">
                         <div class="main2_3A-img">
                             <picture>
-                                <source srcset="img/home-section4-2-sm.png" media="(max-width:735px)">
+                                <source srcset="img/home-section4-2-sm.png" media="(max-width:576px)">
                                 <img src="img/home-section4-2.png" alt="home-section2-2">
                             </picture>
                         </div>
@@ -145,11 +145,11 @@
         <!----------------------main2------------------->
         <!----------------------main3------------------->
         <div class="main3">
-            <div class="main3_box-in">
+            <div class="main3-box-in">
                 <div class="main3_1A-title">
                     <h2>顧客推薦</h2>
                 </div>
-                <div class="main3_1A-icon d-flex">
+                <div class="main3_1A-icon">
                     <div class="main3_2A-card1">
                         <div class="main3_3A-img">
                             <img src="img/home-section5-1.png" alt="home-section5-1">
@@ -184,7 +184,7 @@
                         <div class="main3_3A-img">
                             <img src="img/home-section5-4.png" alt="home-section5-4">
                         </div>
-                        <div class="main3_3B pd-del">
+                        <div class="main3_3B">
                             <P>Kyuan</P>
                             <p>服務很好，品質沒有任何問題，非常喜歡。</p>
                             <p class="main3_4A-time"><time>2020/10/31</time></p>
@@ -230,23 +230,23 @@
         <!----------------------form------------------->
         <!----------------------footer------------------->
         <div class="footer">
-            <div class="footer-box-in box-in-set">
-                <div class="footer_1A-box d-flex">
+            <div class="footer-box-in">
+                <div class="footer_1A-box">
                     <div class="footer_2A-article-box">
-                        <div class="footer_3A-text-box d-flex">
+                        <div class="footer_3A-text-box">
                             <a href="#"><p class="text-set">首頁</p></a>
                             <a href="#"><p class="text-set">系列鏡框</p></a>
                             <a href="#"><p class="text-set">門市據點</p></a>
                             <a href="#"><p class="text-set">部落格</p></a>
                             <a href="#"><p class="text-set">常見問題</p></a>
                         </div>
-                        <div class="footer_3A-phone-box d-flex">
+                        <div class="footer_3A-phone-box">
                             <span class="material-symbols-outlined icon-set">
                                 call
                             </span>
                             <p class="icon-text-set">0800-000-000</p>
                         </div>
-                        <div class="footer_3A-email-box d-flex ">
+                        <div class="footer_3A-email-box">
                             <span class="material-symbols-outlined icon-set">
                                 mail
                             </span>
@@ -254,16 +254,16 @@
                         </div>
                     </div>
                     <div class="footer_2A-icon-box">
-                        <div class="footer_3B-icon-img d-flex">
+                        <div class="footer_3B-icon-img">
                             <a href="#"><img src="img/ic-social-fb.png" alt="fb-icon"></a>
                             <a href="#"><img src="img/ic_social_ig.png" alt="ig-icon"></a>
                             <a href="#"><img src="img/ic_social_line.png" alt="line-icon"></a>
                         </div>
                     </div>
                 </div>
-                <div class="footer_1A-ft-box d-flex">
+                <div class="footer_1A-ft-box">
                     <p>Copyright © 2020 Glasses.All rights reserved.</p>
-                    <div class="footer_2B-text d-flex">
+                    <div class="footer_2B-text">
                         <a href="#"><p>隱私權政策</p></a>
                         <a href="#"><p>服務條款</p></a>
                     </div>
