--- a/第3周主線作業.html
+++ b/第3周主線作業.html
@@ -244,19 +244,23 @@
                             <span class="material-symbols-outlined icon-set">
                                 call
                             </span>
-                            <p class="icon-text-set">0800-000-000</p>
+                            <p>0800-000-000</p>
                         </div>
                         <div class="footer_3A-email-box">
                             <span class="material-symbols-outlined icon-set">
                                 mail
                             </span>
-                            <p class="icon-text-set">glasses@business.com</p>
+                            <p>glasses@business.com</p>
                         </div>
                     </div>
                     <div class="footer_2A-icon-box">
                         <div class="footer_3B-icon-img">
                             <a href="#"><img src="img/ic-social-fb.png" alt="fb-icon"></a>
+                        </div>
+                        <div class="footer_3B-icon-img">    
                             <a href="#"><img src="img/ic_social_ig.png" alt="ig-icon"></a>
+                        </div>
+                        <div class="footer_3B-icon-img">    
                             <a href="#"><img src="img/ic_social_line.png" alt="line-icon"></a>
                         </div>
                     </div>
