作業更新(訂正)

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                 </div>
                 <div class="nav_1A-list">
                     <div class="nav_2A-list">
-                        <a href="#"><p>系列鏡框</p></a>
+                        <a href="#">系列鏡框</a>
                     </div>
                     <div class="nav_2A-list">
-                        <a href="#"><p>門市據點</p></a>
+                        <a href="#">門市據點</a>
                     </div>
                     <div class="nav_2A-list">
-                        <a href="#"><p>部落格</p></a>
+                        <a href="#">部落格</a>
                     </div>
                     <div class="nav_2A-list">
-                        <a href="#"><p>常見問題</p></a>
+                        <a href="#">常見問題</a>
                     </div>
                 </div>
             </div>    
@@ -96,19 +96,19 @@
                         <div class="main_3A-img">
                             <img src="img/home-section3-1.png" alt="home-section2-1">
                         </div>
-                        <p>OPTICAL</p>
+                        <h3>OPTICAL</h3>
                     </div>
                     <div class="main_2A-card1">
                         <div class="main_3A-img">
                             <img src="img/home-section3-2.png" alt="home-section2-2">
                         </div>
-                        <p>SUNGLASSES</p>
+                        <h3>SUNGLASSES</h3>
                     </div>
                     <div class="main_2A-card1">
                         <div class="main_3A-img">
                             <img src="img/home-section3-3.png" alt="home-section2-3">
                         </div>
-                        <p>FUNCTIONAL</p>
+                        <h3>FUNCTIONAL</h3>
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
         <div class="form">
             <div class="form-box-in">
                 <div class="form_1A-title">
-                    <h4>聯絡我們</h4>
+                    <h2>聯絡我們</h2>
                 </div>
                 <div class="form_1A-text">
                     <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
@@ -244,13 +244,13 @@
                             <span class="material-symbols-outlined icon-set">
                                 call
                             </span>
-                            <p>0800-000-000</p>
+                            <a href="tel:+886-800000000"><p>0800-000-000</p></a>
                         </div>
                         <div class="footer_3A-email-box">
                             <span class="material-symbols-outlined icon-set">
                                 mail
                             </span>
-                            <p>glasses@business.com</p>
+                            <a href="matilto:glasses@business.com"><p>glasses@business.com</p></a>
                         </div>
                     </div>
                     <div class="footer_2A-icon-box">
@@ -268,8 +268,8 @@
                 <div class="footer_1A-ft-box">
                     <p>Copyright © 2020 Glasses.All rights reserved.</p>
                     <div class="footer_2B-text">
-                        <a href="#"><p>隱私權政策</p></a>
-                        <a href="#"><p>服務條款</p></a>
+                        <a href="#">隱私權政策</a>
+                        <a href="#">服務條款</a>
                     </div>
                 </div>
             </div>
